--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "BackendTesting-NodeJs-Express-JEST-SUPERTEST",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
