--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
