--- a/server/.env.dev
+++ b/server/.env.dev
@@ -1,6 +1,6 @@
 MONGO_URI=****************************************************************************************
 PORT=****
-CLOUD_NAME=*********
-API_KEY=***************
-API_SECRET=***************************
+CLOUDINARY_CLOUD_NAME=*********
+CLOUDINARY_API_KEY=***************
+CLOUDINARY_API_SECRET=***************************
 SECRET_KEY_JWT=***************
