--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "BackendTesting-NodeJs-Express-JEST-SUPERTEST",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose"
   },
   "repository": {
     "type": "git",
