--- a/server/.env.dev
+++ b/server/.env.dev
@@ -1,4 +1,5 @@
 MONGO_URI=****************************************************************************************
+TEST_MONGO_URI=**************************************************************************************
 PORT=****
 CLOUDINARY_CLOUD_NAME=*********
 CLOUDINARY_API_KEY=***************
